# grocery-flywheel

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: agent-law.yml  ci.yml
docs/: DATA_MODEL.md  DECISION_REGISTER.md  DIETARY_RESTRICTIONS_MODULE.md  EXPANSION_USE_CASES.md  META_PATTERNS.md  ONBOARDING.md  OPERATOR_RUNBOOK.md  PRD.md  PRIVACY_SECURITY_BASELINE.md  PRODUCT_DESIGN_RESEARCH_2026.md  RETAILER_ADAPTERS.md  SOURCING_RESEARCH_STAGE.md  VISION_GRILL.md  WORKFLOW_SPEC.md  design-preview.html
docs/adr/: 0001-local-first-private-workflow.md
docs/agent-law/: empower-orchestrator.md
examples/: retailer_profiles.json  sample_state.json
skills/grocery-flywheel/: SKILL.md
skills/grocery-flywheel/agents/: openai.yaml
src/grocery_flywheel/: __init__.py  capture_visit.py  cli.py  core.py  cost_log.py  easy_food.py  freshness.py  mcp_server.py  render.py  retailer_adapter.py
tests/: test_capture_visit_cli.py  test_core.py  test_cost_log.py  test_dashboard_freshness.py  test_dashboard_visits.py  test_easy_food.py  test_freshness.py
