[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery-flywheel"
version = "0.1.0"
description = "Local-first grocery runway and decision-fatigue workflow"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
grocery-flywheel = "grocery_flywheel.cli:main"
grocery-flywheel-mcp = "grocery_flywheel.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
